--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,8 +6,8 @@ Author: Benjamin Mayne
 Maintainer: Benjamin Mayne <benjamin.mayne@adelaide.edu.au>
 Description: Quantitates read counts from a GBS experiment
 License: GPL-3
-Collate: 'rawCounts.R' 'checkCuts.R' 'plotCounts.R' 'diffCutting.R' 'plotCircos.R'
+Collate: 'rawCounts.R' 'checkCuts.R' 'plotCounts.R' 'diffCutting.R' 'plotCircos.R' 'plotChr.R'
 LazyData: TRUE
 RoxygenNote: 5.0.1
-Depends: ggplot2, parallel, Rsamtools, bedr, edgeR, limma, ggbio, R (>= 3.0.2)
+Depends: ggplot2, parallel, Rsamtools, bedr, edgeR, limma, GenomicRanges, ggbio, R (>= 3.0.2)
 Suggests:BiocGenerics
