--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,3 +7,26 @@ export(plotChr)
 export(plotCircos)
 export(plotCounts)
 export(rawCounts)
+import(GenomeInfoDb)
+import(GenomicFeatures)
+import(GenomicRanges)
+import(Rsamtools)
+import(edgeR)
+import(parallel)
+import(plyr)
+importFrom(GenomicRanges,makeGRangesFromDataFrame)
+importFrom(IRanges,IRanges)
+importFrom(R.utils,gunzip)
+importFrom(R.utils,gzip)
+importFrom(S4Vectors,Rle)
+importFrom(easyRNASeq,BamFileList)
+importFrom(easyRNASeq,validate)
+importFrom(ggbio,autoplot)
+importFrom(ggbio,circle)
+importFrom(ggbio,ggbio)
+importFrom(ggbio,layout_karyogram)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,qplot)
+importFrom(stats,model.matrix)
+importFrom(stats,relevel)
+importFrom(utils,read.table)
