--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ import(GenomicFeatures)
 import(GenomicRanges)
 import(Rsamtools)
 import(edgeR)
+import(ggplot2)
 import(parallel)
 import(plyr)
 importFrom(GenomicRanges,makeGRangesFromDataFrame)
@@ -25,7 +26,6 @@ importFrom(ggbio,autoplot)
 importFrom(ggbio,circle)
 importFrom(ggbio,ggbio)
 importFrom(ggbio,layout_karyogram)
-importFrom(ggplot2,aes)
 importFrom(ggplot2,qplot)
 importFrom(stats,model.matrix)
 importFrom(stats,relevel)
