--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ import(edgeR)
 import(ggplot2)
 import(parallel)
 import(plyr)
+import(stats)
 importFrom(GenomicRanges,makeGRangesFromDataFrame)
 importFrom(IRanges,IRanges)
 importFrom(R.utils,gunzip)
