--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,7 +15,6 @@ import(edgeR)
 import(ggplot2)
 import(parallel)
 import(plyr)
-import(stats)
 importFrom(GenomicRanges,makeGRangesFromDataFrame)
 importFrom(IRanges,IRanges)
 importFrom(R.utils,gunzip)
@@ -28,4 +27,6 @@ importFrom(ggbio,circle)
 importFrom(ggbio,ggbio)
 importFrom(ggbio,layout_karyogram)
 importFrom(ggplot2,qplot)
+importFrom(stats,model.matrix)
+importFrom(stats,relevel)
 importFrom(utils,read.table)
